Recuperado as informações do banco e agora as casas cadastradas são exibidas na sua própria tela

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -29,3 +29,7 @@ small {
 .colored-toast.swal2-icon-success {
   background-color: #a5dc86 !important;
 }
+
+.btn-color {
+  background-color: #24285B;
+}
