--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 body {
   font-family: "Poppins", sans-serif;
 }
@@ -12,8 +11,7 @@ body {
   width: 45px;
 }
 
-.main-title h2,
-small {
+.main-title h2, small {
   display: flex;
   justify-content: center;
 }
@@ -32,4 +30,24 @@ small {
 
 .btn-color {
   background-color: #24285B;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #212529;
+  border-radius: 10px;
+  width: 1px;
+}
+
+::-webkit-scrollbar-track {
+  background-image: url(../assets/img/custom-bar.jpg);
+  background-repeat: repeat-y;
+  background-position: center;
+  padding: 10px 0;
+  margin: 5px 0 10px;
+  border-radius: 25px;
 }
