--- a/src/template/navbar-login.phtml
+++ b/src/template/navbar-login.phtml
@@ -5,7 +5,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <div class="container-fluid">
         <img class="p-2" src="../assets/img/logo.png" alt="Logo">
-        <a class="navbar-brand text-white" href="/">Casas Tombadas</a>
+        <a class="navbar-brand text-white" href="/">Legado Histórico</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
